[package]
name = "pg-rs"
version = "0.1.0"
authors = ["Priyanshu Jain <ipriyanshujain@gmail.com>"]
edition = "2021"

[lib]
name = "pg_rs"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2rs = "0.2"
rocket = "0.4"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono", "serde_json"] }
dotenv = "0.15"
serde = "1"
serde_json = "1"
serde_derive = "1"
validator = "0.16"
validator_derive = "0.16"
ring = "0.16"
rand = "0.7"

[dev-dependencies]
quickcheck = "0.9"
speculate = "0.1"
parking_lot = { version = "0.12", features = ["nightly"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "diesel_postgres_pool"]

[features]
default = []
